--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
   <!--Body-->
   <body>
     <!--Header-->
-    <header class="header header-portfolio">
+    <header class="header header-line">
       <div class="container">
         <a class="logo" href="./index.html">
           Web<span class="logo-black">Studio</span>
@@ -38,7 +38,7 @@
             <li class="site-nav-item">
               <a class="header-link link" href="./index.html">Студия</a>
             </li>
-            <li class="site-nav-item">
+            <li class="site-nav-item current">
               <a class="header-link link current" href="./portfolio.html"
                 >Портфолио</a
               >
@@ -103,13 +103,23 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio/img_1.jpg"
-                  alt="Ноутбук с контентом"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img_1.jpg"
+                    alt="Ноутбук с контентом"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о&nbsp;компании или
+                      частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title title">Технокряк</h2>
                   <p class="portfolio-discr">Веб-сайт</p>
@@ -123,13 +133,23 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio/img_2.jpg"
-                  alt="Два баскетболиста"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img_2.jpg"
+                    alt="Два баскетболиста"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о&nbsp;компании или
+                      частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title title">
                     Постер New Orlean vs Golden Star
@@ -145,13 +165,23 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio/img_3.jpg"
-                  alt="Логотип ресторана"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img_3.jpg"
+                    alt="Логотип ресторана"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о&nbsp;компании или
+                      частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title title">Ресторан Seafood</h2>
                   <p class="portfolio-discr">Приложение</p>
@@ -165,13 +195,23 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio/img_4.jpg"
-                  alt="Наушники"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img_4.jpg"
+                    alt="Наушники"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о&nbsp;компании или
+                      частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title title">Проект Prime</h2>
                   <p class="portfolio-discr">Маркетинг</p>
@@ -185,13 +225,23 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio/img_5.jpg"
-                  alt="Две коробки"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img_5.jpg"
+                    alt="Две коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о&nbsp;компании или
+                      частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title title">Проект Boxes</h2>
                   <p class="portfolio-discr">Приложение</p>
@@ -205,13 +255,23 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio/img_6.jpg"
-                  alt="Монитор с изображением"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img_6.jpg"
+                    alt="Монитор с изображением"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о&nbsp;компании или
+                      частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title title">
                     Inspiration has no Borders
@@ -227,13 +287,23 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio/img_7.jpg"
-                  alt="Открытая книга"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img_7.jpg"
+                    alt="Открытая книга"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о&nbsp;компании или
+                      частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title title">Издание Limited Edition</h2>
                   <p class="portfolio-discr">Дизайн</p>
@@ -247,13 +317,23 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio/img_8.jpg"
-                  alt="Бирочка"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img_8.jpg"
+                    alt="Бирочка"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о&nbsp;компании или
+                      частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title title">Проект LAB</h2>
                   <p class="portfolio-discr">Маркетинг</p>
@@ -267,13 +347,23 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="portfolio-img"
-                  src="./images/portfolio/img_9.jpg"
-                  alt="Ноутбук с программным обеспечением"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-img-thumb">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/img_9.jpg"
+                    alt="Ноутбук с программным обеспечением"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-descr">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о&nbsp;компании или
+                      частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-container">
                   <h2 class="portfolio-title title">Growing Business</h2>
                   <p class="portfolio-discr">Приложение</p>
