--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!--Body-->
   <body>
     <!--Header-->
-    <header class="header">
+    <header class="header header-line">
       <div class="container">
         <a class="logo" href="./index.html">
           Web<span class="logo-black">Studio</span>
@@ -35,7 +35,7 @@
         <!--Navigation-->
         <nav class="site-nav">
           <ul class="nav-list list">
-            <li class="site-nav-item">
+            <li class="site-nav-item current">
               <a class="header-link link current" href="./index.html">Студия</a>
             </li>
             <li class="site-nav-item">
@@ -76,7 +76,9 @@
       <section class="hero">
         <div class="hero-bg container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-btn" type="button">Заказать услугу</button>
+          <button class="hero-btn" type="button" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
       <!--Особенности-->
@@ -141,13 +143,16 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-types-list card-set list">
             <li class="work-types-item card-item">
-              <img
-                class="images"
-                src="./images/worktypes/img_1.jpg"
-                alt="Верстка"
-                width="370"
-                height="294"
-              />
+              <div class="work-types-container">
+                <img
+                  class="images"
+                  src="./images/worktypes/img_1.jpg"
+                  alt="Верстка"
+                  width="370"
+                  height="294"
+                />
+              </div>
+              <p class="work-types-descr">Десктопные приложения</p>
             </li>
             <li class="work-types-item card-item">
               <img
@@ -157,6 +162,7 @@
                 width="370"
                 height="294"
               />
+              <p class="work-types-descr">Мобильные приложения</p>
             </li>
             <li class="work-types-item card-item">
               <img
@@ -166,6 +172,7 @@
                 width="370"
                 height="294"
               />
+              <p class="work-types-descr">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -623,5 +630,16 @@
         </div>
       </div>
     </footer>
+    <!-- Modal window -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-close" data-modal-close>
+          <svg class="modal-close-icon" width="30" height="30">
+            <use href="./images/icons.svg#modal-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
